--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hugo-sugoi"]
 	path = themes/hugo-sugoi
 	url = https://github.com/aanupam23/hugo-sugoi.git
+[submodule "site/themes/hugo-sugoi"]
+	path = site/themes/hugo-sugoi
+	url = https://github.com/aanupam23/hugo-sugoi.git
