--- a/site/config.toml
+++ b/site/config.toml
@@ -1,3 +1,37 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://iamfumi.github.io/cutcat'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'cutcat'
+theme = 'sugoi'
+
+enableEmoji = 'true'
+hasCJKLanguage = 'false'
+paginate = 10
+
+[params]
+    project_name = 'cutcat'
+    project_tagline = 'Detecting the build tools in use'
+    project_logo = 'logo.png'
+    date_format = 'Jan 02, 2006'
+    katex = true
+
+[menu]
+    [[menu.nav]]
+        name = ":house: Home"
+        url = "/"
+        weight = 1
+    [[menu.nav]]
+        name = ":anchor: Install"
+        url = "/install/"
+        weight = 2
+    [[menu.nav]]
+        name = ":runner: Usage"
+        url = "/usage/"
+        weight = 3
+    [[menu.nav]]
+        name = ":smile: About"
+        url = "/about/"
+        weight = 4
+    [[menu.nav]]
+        name = ":chart_with_upwards_trend: Coverage"
+        url = "/coverage/"
+        weight = 4
